# unifi-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: README.md  marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  missing_tool.yml
.github/workflows/: test.yml
docs/: API.md  AUTH_DISCOVERY.md  CLAUDE_CODE_SETUP.md  SECURITY_REVIEW.md
src/unifi_mcp/: __init__.py  __main__.py  cache.py  config.py  errors.py  safety.py  server.py
src/unifi_mcp/auth/: client.py  discovery.py
src/unifi_mcp/tools/: _registry.py
src/unifi_mcp/tools/network/: backups.py  clients.py  devices.py  dpi.py  (+16 more)
tests/fixtures/: clients.json  devices.json  firewall_groups.json  firewall_rules.json  health.json  networks.json  sysinfo.json  topology.json  traffic_flows.json  traffic_rules.json  wlans.json  zbf_policies.json  zbf_zones.json
tests/fixtures/protect/: camera_detail.json  cameras.json  liveviews.json  nvrs.json
tests/integration/: conftest.py  test_auth_discovery_sweep.py  test_live_network.py
tests/unit/: test_auth_client.py  test_auth_discovery.py  test_cache.py  test_config.py  test_errors.py  test_network_clients.py  test_network_coverage.py  test_network_devices.py  test_network_firewall.py  test_network_networks.py  test_network_remaining.py  test_network_system.py  test_network_topology.py  test_network_traffic_flows.py  test_network_traffic_rules.py  test_network_wifi.py  test_network_zbf.py  test_protect_cameras.py  test_protect_devices.py  test_protect_events.py  test_registry.py  test_safety.py
(+3 files in other folders)
